<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.propelld.app.bakingapp.fragments.DetailViewFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_ing"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="@dimen/cardview_compat_inset_shadow">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:id="@+id/details_ingredientHeading"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/details_ingredients"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/details_steps">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>