...
        android:paddingLeft="10dp"
        android:padding="@dimen/cardview_compat_inset_shadow">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/desc_text"/>

    </android.support.v7.widget.CardView>
</LinearLayout>

